--- a/programs/test/Cargo.toml
+++ b/programs/test/Cargo.toml
@@ -9,15 +9,17 @@ crate-type = ["cdylib", "lib"]
 name = "test"
 
 [features]
-default = ["arch"]
+default = []
 cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
-arch = ["satellite-lang"]
 
 [dependencies]
-anchor-lang = { version = "0.31.1", optional = true }
-satellite-lang = { git = "https://github.com/SaturnBTC/satellite.git", branch = "satellite", package = "satellite-lang", optional = true }
+anchor-lang = { version = "0.31.1" }
+arch_program = { version = "0.5.11" }
+# satellite-lang = { git = "https://github.com/SaturnBTC/satellite.git", branch = "satellite", package = "satellite-lang", optional = true }
+# satellite-lang = { git = "ssh://git@github.com/SaturnBTC/whirlpools.git", branch = "main", package = "satellite-lang", optional = true }
+satellite-lang = { version = "0.31.1" }
 
